--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
   <div class="col-lg-6">
-    <img class="title-image" src="images/Moble.jpg" alt="iphone-mockup">
+    <img class="title-image" src="/images/Moble.jpg" alt="iphone-mockup">
     </div>
 
     </div>
