--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" href="#footer">Socials</a>
       </li>
       <li class="nav-item">
@@ -56,22 +53,26 @@
 
   <div class="row">
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 header-text">
       <h1>Coming Soon.</h1>
-      <p class="small">  Where motocyclist unite</p>
-      <p class="small">Preregister for early access</p>
-
-    <form class="form-inline">
-      <div class="form-group mx-sm-6 mb-2">
-      <input type="text" class="form-control" id="staticEmail" placeholder="Email Address">
-    <button type="submit" class="btn btn-dark btn-primary mb-2  Access-button">Get Early Access</button>
+      <h3>  Where motocyclist unite</h3>
+      <h3>Preregister for early access</h3>
     </div>
-    </form>
 
-    </div>
+
 
   <div class="col-lg-6">
-    <img class="title-image" src="Moble.jpg" alt="iphone-mockup">
+    <img class="title-image" src="images/Moble.jpg" alt="iphone-mockup">
+    </div>
+
+    <div class="col-lg-6 input-group">
+      <div class="input-group">
+    <input type="text" class="form-control" id="staticEmail" placeholder="Email Address">
+    <span class="input-group-btn">
+      <button class="btn btn-dark btn-primary  Access-button">Get Early Access</button>
+    </span>
+
+    </div>
     </div>
 
     </div>
