--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
   <div class="col-lg-6">
-    <img class="title-image" src="Moble.jpg" alt="iphone-mockup">
+    <img class="title-image" src="Moble.jpg" alt="iphone-mockup" style="padding-top: 20px;">
     </div>
 
     <div class="col-lg-6 input-group">
